--- a/assets/_globals.scss
+++ b/assets/_globals.scss
@@ -1,3 +1,7 @@
+// google font
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+
 // reseting browser settings
 * {
   margin: 0;
@@ -31,4 +35,23 @@ html {
 
 .jc-sb {
   justify-content: space-between;
+}
+
+// typography
+
+body {
+  font-family: "Roboto";
+}
+
+.tt-u {
+  text-transform: uppercase;
+}
+
+.tt-n {
+  text-transform: none;
+}
+
+// other stylings
+.cp {
+  cursor: pointer;
 }
